--- a/.github/workflows/github-action.yaml
+++ b/.github/workflows/github-action.yaml
@@ -72,13 +72,12 @@ jobs:
 
       - name: Create Plugin archives and manifests
         run: |
-          BETA_FLAG=""
-          if [[ "${{ env.PLUGIN_IS_BETA }}" == "true" ]]; then
-            BETA_FLAG="-beta"
-          fi
-
+          $BETA_FLAG = ""
+          if ($env:PLUGIN_IS_BETA -eq "true") {
+            $BETA_FLAG = "-beta"
+          }
           curl -LO https://raw.githubusercontent.com/isbeorn/nina.plugin.manifests/refs/heads/main/tools/CreateManifest.ps1?raw=true
-          pwsh CreateManifest.ps1 -file "packages/${{ env.PLUGIN_NAME }}/${{ env.PLUGIN_DLL_NAME }}.dll" ${BETA_FLAG} -installerUrl "https://github.com/${{ github.repository }}/releases/download/${{ github.ref_name }}/${{ env.PLUGIN_DLL_NAME }}.${{ github.ref_name }}.zip" -createArchive -includeAll -appendVersionToArchive
+          pwsh CreateManifest.ps1 -file "packages/${{ env.PLUGIN_NAME }}/${{ env.PLUGIN_DLL_NAME }}.dll" $BETA_FLAG -installerUrl "https://github.com/${{ github.repository }}/releases/download/${{ github.ref_name }}/${{ env.PLUGIN_DLL_NAME }}.${{ github.ref_name }}.zip" -createArchive -includeAll -appendVersionToArchive
           Rename-Item -Path "manifest.json" -NewName "${{ env.PLUGIN_DLL_NAME }}.${{ github.ref_name }}.manifest.json"
 
       - name: Create Release
