--- a/Ground Station.csproj
+++ b/Ground Station.csproj
@@ -15,18 +15,19 @@
   <ItemGroup>
     <PackageReference Include="Discord.Net.Webhook" Version="3.18.0" />
     <PackageReference Include="MailKit">
-      <Version>4.13.0</Version>
+      <Version>4.14.1</Version>
       <IncludeAssets></IncludeAssets>
     </PackageReference>
     <PackageReference Include="MQTTnet">
       <Version>3.1.2</Version>
     </PackageReference>
     <PackageReference Include="NetCoreAudio" Version="2.0.0" />
-    <PackageReference Include="NINA.Plugin" Version="3.1.0.9001" />
+    <PackageReference Include="NINA.Plugin" Version="3.2.0.9001" />
     <PackageReference Include="ntfy" Version="0.5.0" />
-    <PackageReference Include="SlackNet" Version="0.17.2" />
-    <PackageReference Include="System.Data.DataSetExtensions" Version="4.5.0" />
-    <PackageReference Include="System.Speech" Version="8.0.0" />
+    <PackageReference Include="SlackNet" Version="0.17.5" />
+    <PackageReference Include="System.Speech" Version="8.0.0">
+      <TreatAsUsed>true</TreatAsUsed>
+    </PackageReference>
     <PackageReference Include="Telegram.Bot">
       <Version>19.0.0</Version>
     </PackageReference>
